# easy_agent_pilot

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  README.md  models.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
data/data/: easy-agent.db
demo/solo-tauri2-demo/: index.html  package.json  pnpm-lock.yaml
docs/: auto-update-release.md  mcp-market-integration.md
scripts/: build-ci.mjs  mcpmarket-fetcher.mjs
src/: App.vue
src-tauri/: Cargo.toml  tauri.ci.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logging.rs
src-tauri/src/commands/: agent.rs  agent_cli_usage.rs  agent_config.rs  agent_profile.rs  agent_studio.rs  agent_team.rs  app_state.rs  cli.rs  cli_config.rs  cli_installer.rs  cli_support.rs  data.rs  file_editor.rs  install.rs  lsp.rs  marketplace.rs  mcp.rs  mcp_market.rs  mcp_shared.rs  mcpmarket_source.rs  memory.rs  message.rs  mini_panel.rs  mini_panel_macos_shortcut.rs  mini_panel_windows_shortcut.rs  mod.rs  plan.rs  plan_split.rs  plugins_market.rs  project.rs  project_access.rs  provider_profile.rs  runtime_log.rs  scan.rs  scan_session_shared.rs  scan_shared.rs  session.rs  settings.rs  skill_plugin.rs  skills_market.rs  (+6 more)
src-tauri/src/commands/conversation/: abort.rs  executor.rs  mod.rs  strategy.rs  types.rs
src-tauri/src/commands/conversation/strategies/: abnormal_completion.rs  claude_cli.rs  claude_sdk.rs  cli_common.rs  codex_cli.rs  codex_sdk.rs  mod.rs  opencode_cli.rs
src-tauri/src/database/: mod.rs
src-tauri/src/scheduler/: plan_scheduler.rs
src-tauri/src/unattended/: repository.rs
src/composables/: index.ts  useConfirmDialog.ts  useConversationComposer.ts  useDefaultCliConfigEditor.ts  useMessageComposer.ts  useSessionView.ts  useWindowEvents.ts
src/locales/: en-US.ts  zh-CN.ts
src/services/: pluginCommands.ts  slashCommands.ts
src/stores/: agent.ts  agentConfig.ts  agentProfile.ts  agentScheduler.ts  agentStudio.ts  agentTeam.ts  agentTeams.ts  aiEditTrace.ts  appState.ts  appUpdate.ts  cliInstaller.ts  index.ts  layout.ts  marketplace.ts  memory.ts  message.ts  notification.ts  plan.ts  project.ts  providerProfile.ts  session.ts  sessionExecution.ts  settings.ts  settingsSchema.ts  skillConfig.ts  skillConfigShared.ts  soloExecution.ts  soloRun.ts  splitPane.ts  task.ts  taskExecution.ts  taskExecutionPersistence.ts  taskExecutionPlanRuntime.ts  taskExecutionShared.ts  taskExecutionTaskRuntime.ts  taskSplit.ts  ui.ts  (+3 more)
(+346 files in other folders)
