[package]
name = "easy-agent-pilot"
version = "1.0.0"
description = "Easy Agent Pilot - AI Agent 管理工具"
authors = ["you"]
edition = "2021"

[lib]
name = "easy_agent_pilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-mcp-bridge = "0.9"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# 数据库
rusqlite = { version = "0.32", features = ["bundled"] }

# Git 操作
git2 = "0.19"

# Token 计数
tiktoken-rs = "0.5"

# 错误处理
thiserror = "2"
anyhow = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 目录路径
dirs = "5"

# UUID
uuid = { version = "1", features = ["v4"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream"] }

# 并发
parking_lot = "0.12"

# Lazy static
lazy_static = "1.4"
once_cell = "1.19"

# 系统信息
sysinfo = "0.33"

# Futures
futures = "0.3"

# MCP SDK (官方 Rust 实现)
rmcp = { version = "0.17", features = [
    "client",
    "server",
    "transport-child-process",
    "transport-io",
    "transport-streamable-http-client-reqwest",
] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.25"

[profile.dev]
# Keep local debugging usable, but avoid huge symbol files in repeated tauri dev rebuilds.
debug = 1

[profile.dev.package."*"]
# Dependency debug info dominates target/debug size and is rarely needed in day-to-day UI work.
debug = 0

[profile.release]
codegen-units = 1
lto = "thin"
strip = "debuginfo"
